--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body{
 
 h1{
     color: rgb(9, 27, 59);
+    margin-bottom: 50px;
 }
 
 .row{
@@ -25,4 +26,5 @@ h1{
     display:flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 }
